--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header class="orionlabs">
         <div class="header-logo">
-            <a href="www.orionlabs.in"><img src="./image/orionlab-logo.webp" alt="logo"></a>
+            <a href="add link if you want"><img src="yourlogo" alt="logo"></a>
         </div>
     </header>
     <h1>QR Code Generator</h1>
